# rechol_user_section

./: .dockerignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  Dockerfile  biome.jsonc  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: cert.yaml  deploy.yaml
bower_components/TableFilter/: .bower.json  CONTRIBUTING.md  README.md
bower_components/awesomplete/: .bower.json  CHANGELOG.md  README.md  awesomplete.min.js.map  awesomplete.theme.css  index.js
bower_components/bootstrap/: .bower.json
bower_components/bootstrap-select/: .bower.json
bower_components/daterangepicker/: .bower.json  README.md
bower_components/eonasdan-bootstrap-datetimepicker/: .bower.json  mkdocs.yml
bower_components/humanize-duration/: .bower.json
bower_components/jQuery-contextMenu/: .bower.json
bower_components/jquery/: .bower.json
bower_components/knockout/: .bower.json
bower_components/moment/: .bower.json
bower_components/perfect-scrollbar/: .bower.json  README.md
configs/: Dockerfile.nginx  Dockerfile.nginx.dockerignore  README.md  site.conf  site.prod.conf
frontend/: .eslintcache  .gitignore  biome.jsonc  eslint.config.mjs  index.html  knip.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
frontend/src/: App.tsx  index.scss  main.tsx  theme.ts  vite-env.d.ts
infra/: .terraform.lock.hcl  acm.tf  agw.tf  backend_lambda.tf  cloudwatch.tf  cloudwatch_logs.tf  ecr.tf  iam_cert.tf  iam_deploy.tf  locals.tf  misc.tf  outputs.tf  providers.tf  s3_misc.tf  s3_private.tf  s3_static.tf  secrets_manager.tf
infra/ecr_curl/: README.md  outputs.tf  providers.tf  pull.sh  pull_then_push.sh  variables.tf
patches/locale_ru/: django.mo  django.po
rechol_user_section/: asgi.py  aws_lambda.py  middleware.py  settings.py  storages.py  urls.py  views.py  wsgi.py
static_files/TableFilter/: LICENSE
static_files/awesomplete/: CONTRIBUTING.md
static_files/compressed/: manifest.json
static_files/css/: resources.scss  style.scss
static_files/files/: venue_letter_template.docx
static_files/import_export/: import.css
static_files/jQuery-contextMenu/: contextMenu.jquery.json
static_files/js/: select2_custom.js
static_files/moment/: FAQ.md
static_files/pdf_js/: pdf-annotate.js  pdf-annotate.js.map  pdf.js  pdf.worker.js.map  pdf_viewer.js
users/: admin.py  api_urls.py  api_views.py  certificates.py  exception_handler.py  formhelpers.py  forms.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_venuesavailable_user_actual_form_user_birth_date_and_more.py  0003_alter_user_school.py  0004_alter_user_first_name_alter_user_last_name.py  0005_rename_venuesavailable_venue_user_phone.py  0006_alter_user_passport.py  0007_alter_user_passport.py  0008_event.py  0009_alter_user_managers_venue_name_alter_event_start_and_more.py  0010_alter_event_options_alter_user_options_and_more.py  0011_alter_user_venue_selected.py  0012_alter_user_passport.py  (+49 more)
(+217 files in other folders)
